--- a/package.json
+++ b/package.json
@@ -2,16 +2,16 @@
     "name": "ts-jest-sample",
     "version": "0.1.0",
     "description": "A simple project to demonstrate TypeScript + Jest + ts-jest",
-    "main": "lib/src/index.js",
-    "typings": "lib/src/index.d.ts",
     "repository": "github.com:xogeny/ts-jest-sample",
     "author": "Michael M. Tiller",
     "license": "MIT",
     "devDependencies": {
-        "@types/jest": "^22.1.1",
-        "jest": "^22.1.4",
-        "ts-jest": "^22.0.2",
-        "typescript": "^2.7.1"
+        "@types/jest": "^23.0.0",
+        "jest": "^23.1.0",
+        "typescript": "2.8.1"
+    },
+    "dependencies": {
+        "ts-jest": "^22.4.6"
     },
     "scripts": {
         "compile": "tsc",
